# security_device_auth

./: BUILD.gn  MODULE_DEPENDENCIES.md  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  deviceauth_env.gni  hisysevent.yaml
default_config/mini/: config.gni  feature_config.gni
deps_adapter/: BUILD.gn  deviceauth_hals.gni
deps_adapter/key_management_adapter/impl/inc/: huks_adapter_diff_impl.h  huks_adapter_utils.h  mbedtls_ec_adapter.h
deps_adapter/key_management_adapter/impl/src/: huks_adapter.c  huks_adapter_utils.c  mbedtls_ec_adapter.c
deps_adapter/key_management_adapter/interfaces/: alg_defs.h  huks_adapter.h
deps_adapter/os_adapter/impl/src/: hc_err_trace.c  hc_log.c  hc_mutex.c  hc_task_thread.c  hc_time.c
deps_adapter/os_adapter/interfaces/: hal_error.h  hc_dev_info.h  hc_mutex.h  hc_task_thread.h  hc_types.h
deps_adapter/os_adapter/interfaces/linux/: dev_auth_dl.h  dev_auth_dynamic_load.h  hc_err_trace.h  hc_file.h  hc_init_protection.h  hc_log.h
deps_adapter/os_adapter/interfaces/liteos/: hc_err_trace.h  hc_log.h
frameworks/deviceauth_lite/: BUILD.gn
frameworks/deviceauth_lite/fuzztest/: BUILD.gn
frameworks/deviceauth_lite/fuzztest/authenticatepeer_fuzzer/: BUILD.gn  authenticatepeer_fuzzer.cpp  authenticatepeer_fuzzer.h
frameworks/deviceauth_lite/fuzztest/dellocalauthinfo_fuzzer/: BUILD.gn  dellocalauthinfo_fuzzer.cpp  dellocalauthinfo_fuzzer.h
frameworks/deviceauth_lite/fuzztest/destroy_fuzzer/: BUILD.gn  destroy_fuzzer.cpp  destroy_fuzzer.h
frameworks/deviceauth_lite/fuzztest/getinstance_fuzzer/: BUILD.gn  getinstance_fuzzer.cpp  getinstance_fuzzer.h
frameworks/deviceauth_lite/fuzztest/istrustpeer_fuzzer/: BUILD.gn  istrustpeer_fuzzer.cpp  istrustpeer_fuzzer.h
frameworks/deviceauth_lite/fuzztest/listtrustpeer_fuzzer/: BUILD.gn  listtrustpeer_fuzzer.cpp
frameworks/deviceauth_lite/fuzztest/receivedata_fuzzer/: BUILD.gn  receivedata_fuzzer.cpp  receivedata_fuzzer.h
frameworks/deviceauth_lite/fuzztest/registelog_fuzzer/: BUILD.gn  registelog_fuzzer.cpp  registelog_fuzzer.h
frameworks/deviceauth_lite/fuzztest/startpake_fuzzer/: BUILD.gn  startpake_fuzzer.cpp  startpake_fuzzer.h
frameworks/deviceauth_lite/inc/auth_info/: exchange_auth_info.h
frameworks/deviceauth_lite/inc/json/: commonutil.h
frameworks/deviceauth_lite/inc/key_agreement/: key_agreement_server.h  pake_server.h  sts_server.h
frameworks/deviceauth_lite/inc/log/: log.h
frameworks/deviceauth_lite/inc/os_account_adapter/: os_account_adapter.h
frameworks/deviceauth_lite/source/: BUILD.gn  hichain.c
frameworks/deviceauth_lite/source/auth_info/: add_auth_info.c  add_auth_info.h  exchange_auth_info_client.c  remove_auth_info.c  remove_auth_info_client.c
frameworks/deviceauth_lite/test/: BUILD.gn
frameworks/deviceauth_lite/unittest/: BUILD.gn  commonutil_test.h  deviceauth_test.cpp  hichain_pake_test.cpp  hichain_receivedata_test.cpp  huks_adapter_test.cpp  huks_adapter_test.h  jsonutil_test.h
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/src/: credmgr_napi.cpp
services/: BUILD.gn  device_auth.c  device_auth.map  deviceauth.gni  deviceauth_account.gni  deviceauth_service.cfg
services/common/inc/: device_auth_common.h  hisysevent_common.h
services/common/src/: device_auth_common.c  hisysevent_common.c
services/cred_manager/inc/: cred_manager.h
services/cred_manager/src/: cred_manager.c
services/creds_manager/inc/: creds_manager.h  creds_manager_defines.h  creds_operation_utils.h
services/creds_manager/src/: creds_manager.c  creds_operation_utils.c
services/data_manager/inc/: data_manager.h
services/data_manager/src/: data_manager.c
services/ext_plugin_manager/inc/: cred_plugin_def.h  ext_plugin_manager.h
services/ext_plugin_manager/src/: ext_plugin_manager.c
services/frameworks/inc/: common_defs.h
services/group_auth/inc/: base_group_auth.h  group_auth_common_defines.h
services/group_manager/inc/: group_manager.h  group_operation.h  group_operation_common.h
services/group_manager/src/: group_manager.c
services/identity_manager/inc/: cert_operation.h  identity_common.h  identity_defines.h  identity_manager.h
services/identity_manager/src/: cert_operation.c  credential_operator.c  identity_common.c  identity_group.c  identity_manager.c  identity_p2p.c  identity_pin.c
services/identity_service/inc/: identity_operation.h  identity_service.h  identity_service_defines.h  identity_service_impl.h
services/identity_service/src/: identity_operation.c  identity_service.c  identity_service_impl.c
services/key_agree_sdk/: key_agree_sdk.gni
services/key_agree_sdk/inc/: key_agree_sdk.h  key_agree_session.h  key_agree_session_manager.h
services/key_agree_sdk/src/: key_agree_sdk.c  key_agree_session.c  key_agree_session_manager.c
services/mk_agree/inc/: key_manager.h  mk_agree_task.h
services/mk_agree/src/: key_manager.c  mk_agree_task.c
services/privacy_enhancement/inc/: pseudonym_manager.h
services/privacy_enhancement/src/: pseudonym_manager.c
services/protocol/inc/: protocol_common.h
services/sa/sa_profile/: 4701.json  BUILD.gn
services/session_manager/inc/: dev_session_mgr.h
services/session_manager/src/: dev_session_mgr.c
test/: BUILD.gn
test/fuzztest/commonlib_fuzzer/: BUILD.gn  commonlib_fuzzer.cpp  commonlib_fuzzer.h
test/fuzztest/devauth_fuzzer/: BUILD.gn  devauth_fuzzer.cpp  devauth_fuzzer.h
test/fuzztest/devauthcb_fuzzer/: BUILD.gn  devauthcb_fuzzer.cpp
test/fuzztest/devauthfunc_fuzzer/: BUILD.gn  devauthfunc_fuzzer.cpp  devauthfunc_fuzzer.h
test/fuzztest/devauthinterface_fuzzer/: BUILD.gn  devauthinterface_fuzzer.cpp  devauthinterface_fuzzer.h
test/fuzztest/dfx_fuzzer/: BUILD.gn  dfx_fuzzer.cpp  dfx_fuzzer.h
test/fuzztest/identityservice_fuzzer/: BUILD.gn  identityservice_fuzzer.cpp  identityservice_fuzzer.h
test/fuzztest/saloadondemand_fuzzer/: BUILD.gn  saloadondemand_fuzzer.cpp  saloadondemand_fuzzer.h
test/unittest/common_lib_test/: BUILD.gn
test/unittest/deps_adapter_test/: BUILD.gn
test/unittest/deviceauth/: BUILD.gn
test/unittest/tdd_framework/: tdd_framework.gni
(+827 files in other folders)
